<resources>
    <string name="app_name">myCheck</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_idd">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_home1">ca-app-pub-8923248379841058/7281292137</string>
    <string name="banner_home2">ca-app-pub-8923248379841058/6024050784</string>
    <string name="banner_newRemonder">ca-app-pub-8923248379841058/8082403766</string>
    <string name="banner_newTodo">ca-app-pub-8923248379841058/3014744069</string>
    <string name="banner_notesFooter">ca-app-pub-8923248379841058/7967548221</string>
    <string name="banner_reminderFooter">ca-app-pub-8923248379841058/1966096710</string>
    <string name="banner_todoFooter">ca-app-pub-8923248379841058/6351353847</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="active_touch">
        With this Puzzle, You wll be presented with a set number of boxes (depending on level selected) and one of them will be active at any given time. Your task is to touch the Active box, repeating the sequence for the number of active boxes. An Active box has a life span of 5 seconds or the whole puzzle resets and you will be forced to RESTART
    </string>
    <string name="retype">
        With this Puzzle, You wll be presented with a typed text. Your Task is to retype the CASE-SENSITIVE text EXACTLY, keeping in mind special characters, for the Alarm to stop.
    </string>
    <string name="sequence">
        With this puzzle, You will be shown a set number of Shapes (according to the level you choose) in random order. Your task is to carefully memorize the sequence in which the shapes are displayed, and then repeating the same sequence. A matched repeat will stop the Alarm, otherwise the process repeats itself.
    </string>
    <string name="app_slogan">Organize your Tomorrow, Today!</string>
    <string name="tutorial_header">
        \n\n
        myCheck is divided into three Modules \n
        1. myNote(s) \n
        2. myReminder(s) \n
        3. myTodo(s) \n
    </string>
    <string name="tutorial_note">
        \n
        With myNote, you can \n \n
        1. Write your Notes on the GO!. \n
        2. Categorize your Notes to keep them Organized \n
        3. Optional Online Backup Coming Soon. \n
    </string>
    <string name="tutorial_alarm">
        \n
        With myReminders, you can \n \n
        1. Create and set Reminders so you never miss that important moment in your life. \n
        2. Heavy Sleeper? We got you covered with our Puzzled Alarms
    </string>
    <string name="tutorial_todo">
        \n
        With myToDo, you can \n \n
        1. Create ToDo activities \n
        2. Add tasks to each ToDo activity. \n
        3. Track all the tasks and lets keep tab on your progress. \n
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="occupation">Occupation</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="sample_note">
        Am supposed to re-design this card-view so that it matches the general design of the whole app. background gradient color is what i mean
    </string>
    <string name="blank_note">
        It seems you haven\'t added any item here yet! \n Add Items and let me Organize your days for you.
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="str_early_reminder">
        <item>None</item>
        <item>5 minutes before</item>
        <item>10 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
        <item>2 hours before</item>
    </string-array>
    <string-array name="str_reminder_type">
        <item>One Time</item>
        <item>Repeating</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_full_note">FullNote</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Buddy</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_ring_duration">Ring Duration</string>
    <string name="pref_title_snooze_duration">Snooze Duration</string>
    <string name="pref_title_morning">Ideal Morning Hour</string>
    <string name="pref_title_evening">Ideal Evening Hour</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>