<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:key="General_Settings"
      android:title="General"
      android:layout="@layout/preference_category" >

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:summary="Your Name"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="Notification_Settings"
      android:title="Notifications"
      android:layout="@layout/preference_category" >

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="all"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_ring_duration"
        android:entryValues="@array/pref_ring_duration_values"
        android:key="ring_duration"
        android:summary="Alarms will sound for %s before Auto stopping"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_ring_duration" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_snooze_duration"
        android:entryValues="@array/pref_snooze_duration_values"
        android:key="snooze_duration"
        android:summary="Alarm will wait for %s before re-activating (for Auto stopped Alarms)"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_snooze_duration" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="Timing_Settings"
      android:title="Timing"
      android:summary="Ideal time for Notification, so you never miss out"
      android:layout="@layout/preference_category" >

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_timing_morning"
        android:entryValues="@array/pref_timing_values"
        android:key="morning"
        android:summary="%s"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_morning" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_timing_evening"
        android:entryValues="@array/pref_timing_values"
        android:key="evening"
        android:summary="%s"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_evening" />

  </PreferenceCategory>



</PreferenceScreen>
