<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="layout.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/blank_note"
            android:background="@color/colorJumbotron"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dismiss"
            android:id="@+id/lock_dismiss"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Open"
            android:id="@+id/lock_open"/>

    </LinearLayout>

</FrameLayout>
